# audit_log/openapi.yml
@@ -1,16 +1,21 @@
 openapi: 3.0.0
 info:
-  description: This API provides audit info
-  version: "1.0.0"
-  title: Audit API
-  contact: 
-    email: henrikt.dang@gmail.com
+  title: Health App API
+  description: This API receives reading events from diabetic medical devices
+  contact:
+    email: jlodhra@bcit.ca
+  version: 1.0.0
+tags:
+- name: readings
+  description: Operations available to diabetic medical device readings
 paths:
-  /sales/instore:
-    get: 
-      summary: gets reports for instore sales details from history
-      operationId: app.get_instore_sales
-      description: Gets report of instore sales details from the events stored 
+  /readings/blood-sugar:  
+    get:
+      tags:
+      - blood-sugar
+      summary: gets new data for in-store sales
+      description: "get new data for in-store sales figures"
+      operationId: app.get_blood_sugar_reading
       parameters:
         - name: index
           in: query
@@ -26,7 +31,7 @@ paths:
               schema:
                 type: object
                 items: 
-                  $ref: '#/components/schemas/InStoreSales'
+                  $ref: '#/components/schemas/BloodSugarReadings'
         '400':
           description: Invalid request
           content:
@@ -46,11 +51,13 @@ paths:
                   message:
                     type: string
 
-  /sales/online:
-    get: 
-      summary: gets reports for online sales details from history
-      operationId: app.get_online_sales
-      description: Gets report of online sales details from the event store 
+  /readings/cortisol-levels:
+    get:
+      tags:
+      - cortisol-levels
+      summary: gets new data for online sales
+      description: "get new data for online sales figures"
+      operationId: app.cortisol-levels
       parameters:
         - name: index
           in: query
@@ -66,7 +73,7 @@ paths:
               schema:
                 type: object
                 items: 
-                  $ref: '#/components/schemas/OnlineSales'
+                  $ref: '#/components/schemas/CortisolLevelReadings'
         '400':
           description: Invalid request
           content:
@@ -81,68 +88,47 @@ paths:
 
 components:
   schemas:
-    InStoreSales:
+    BloodSugarReadings:
       required:
-      - bill_amount
-      - customer_id
-      - product_id
-      - sales_date
-      - store_id
+        - patient_id
+        - device_id
+        - timestamp
+        - blood_sugar
       type: object
       properties:
-        product_id:
+        patient_id:
           type: string
           format: uuid
           example: d290f1ee-6c54-4b01-90e6-d701748f0851
-        store_id:
+        device_id:
           type: string
-          example: S123
-        customer_id:
-          type: string
-          example: P000000
-        sales_date:
-          type: string
-          format: date-time
-          example: '2016-08-29T09:12:33.001Z'
-        bill_amount:
-          $ref: '#/components/schemas/SalesAmount'
-    OnlineSales:
-      required:
-      - bill_amount
-      - customer_id
-      - delivery_info
-      - product_id
-      - sales_date
-      type: object
-      properties:
-        product_id:
-          type: string
-          format: uuid
-          example: d290f1ee-6c54-4b01-90e6-d701748f0851
-        customer_id:
-          type: string
-          example: I000000
-        delivery_info:
-          type: string
-          example: 123 Nelson Ave, Burnaby, Canada V5J 1P1
-        sales_date:
-          type: string
-          format: date-time
-          example: '2016-08-29T09:12:33.001Z'
-        bill_amount:
-          $ref: '#/components/schemas/SalesAmount'
-    SalesAmount:
-      required:
-      - quantity
-      - unit_price
-      type: object
-      properties:
-        quantity:
+          example: BS9237
+        blood_sugar:
           type: integer
-          example: 100
-        unit_price:
-          type: number
-          example: 10.99
-
-
-
+          example: 5
+        timestamp:
+          type: string
+          format: date-time
+          example: '2016-08-29T09:12:33.001Z'
+    CortisolLevelReadings:
+      required:
+        - patient_id
+        - device_id
+        - timestamp
+        - cortisol_level
+      type: object
+      properties:
+        patient_id:
+          type: string
+          format: uuid
+          example: d290f1ee-6c54-4b01-90e6-d701748f0851
+        device_id:
+          type: string
+          example: CL9012
+        cortisol_level:
+          type: integer
+          example: 40
+        timestamp:
+          type: string
+          format: date-time
+          example: '2016-08-29T09:12:33.001Z'
